; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_boot.c_initcall_print_line.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_boot.c_initcall_print_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_iterator = type { %struct.trace_entry* }
%struct.trace_entry = type { i32 }

@TRACE_TYPE_UNHANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trace_iterator*)* @initcall_print_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @initcall_print_line(%struct.trace_iterator* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.trace_iterator*, align 8
  %4 = alloca %struct.trace_entry*, align 8
  store %struct.trace_iterator* %0, %struct.trace_iterator** %3, align 8
  %5 = load %struct.trace_iterator*, %struct.trace_iterator** %3, align 8
  %6 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %5, i32 0, i32 0
  %7 = load %struct.trace_entry*, %struct.trace_entry** %6, align 8
  store %struct.trace_entry* %7, %struct.trace_entry** %4, align 8
  %8 = load %struct.trace_entry*, %struct.trace_entry** %4, align 8
  %9 = getelementptr inbounds %struct.trace_entry, %struct.trace_entry* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %17 [
    i32 129, label %11
    i32 128, label %14
  ]

11:                                               ; preds = %1
  %12 = load %struct.trace_iterator*, %struct.trace_iterator** %3, align 8
  %13 = call i32 @initcall_call_print_line(%struct.trace_iterator* %12)
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load %struct.trace_iterator*, %struct.trace_iterator** %3, align 8
  %16 = call i32 @initcall_ret_print_line(%struct.trace_iterator* %15)
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @TRACE_TYPE_UNHANDLED, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %14, %11
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @initcall_call_print_line(%struct.trace_iterator*) #1

declare dso_local i32 @initcall_ret_print_line(%struct.trace_iterator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
